tests/failures/invalid_addmm.stderr
error: Second dim was expected to be Symbol("H3") but found Symbol("H4")
  --> tests/failures/invalid_addmm.rs:19:50
   |
19 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_4h_to_h);
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Symbol("H") but found Symbol("H4")
  --> tests/failures/invalid_addmm.rs:32:50
   |
32 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h); // Dimension mismatch wrong argument
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Symbol("H") but found Symbol("H4")
  --> tests/failures/invalid_addmm.rs:32:66
   |
32 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h); // Dimension mismatch wrong argument
   |                                                                  ^^^^^^^^^^^^^^

error: This tensor must be 2 dimensional but found TensorType { shape: [Symbol("B"), Symbol("S"), Symbol("H")], kind: Implicit, device: Implicit }
  --> tests/failures/invalid_addmm.rs:44:50
   |
44 |     let hidden_states = dense_h_to_4h_bias.addmm(&hidden_states, &dense_h_to_4h); //Mismatch addmm
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Symbol("H") but found Symbol("S")
  --> tests/failures/invalid_addmm.rs:44:50
   |
44 |     let hidden_states = dense_h_to_4h_bias.addmm(&hidden_states, &dense_h_to_4h); //Mismatch addmm
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Symbol("H") but found Symbol("H4")
  --> tests/failures/invalid_addmm.rs:50:50
   |
50 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h);
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Symbol("H") but found Symbol("H4")
  --> tests/failures/invalid_addmm.rs:50:66
   |
50 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h);
   |                                                                  ^^^^^^^^^^^^^^
